LLVM: Add XPAC extension for pointer authentication
Updated LLVM submodule to include XPAC vendor extension with four custom PAC instructions (pac.start, pac.end, pac.store, pac.load).

Enables compilation with -march=rv32i_xpac flag.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "llvm/llvm-project"]
 	path = llvm/llvm-project
 	url = https://github.com/yamak/llvm-project.git
+	branch = xpac_support
 [submodule "picolibc/picolibc-src"]
 	path = picolibc/picolibc-src
 	url = https://github.com/picolibc/picolibc.git
