build: Enable PAC support in compiler-rt and picolibc
- llvm/CMakeLists.txt:
  - Add xpac extension to march (-march=rv32imac_zicsr_zifencei_xpac)
  - Enable automatic PAC instrumentation (-mret-xpac)
  - Fix variable names to target-specific format (BUILTINS_riscv32-unknown-elf_*)

- picolibc/CMakeLists.txt:
  - Add xpac extension to march (-march=rv32imc_xpac)
  - Enable automatic PAC instrumentation (-mret-xpac)

- README.md:
  - Add documentation section with link to PAC specification

This ensures that both compiler runtime builtins and the C library
are built with Mithril PAC protection, providing end-to-end
backward-edge CFI across the entire software stack.

--- a/picolibc/CMakeLists.txt
+++ b/picolibc/CMakeLists.txt
@@ -27,7 +27,7 @@ set(TOOLCHAIN_BIN_DIR "${CMAKE_BINARY_DIR}/llvm/llvm-build/bin")
 
 # Create cross-file content
 file(WRITE ${PICOLIBC_CROSS_FILE} "[binaries]\n")
-file(APPEND ${PICOLIBC_CROSS_FILE} "c = ['${TOOLCHAIN_BIN_DIR}/clang', '--target=riscv32-unknown-elf', '-march=rv32imc', '-mabi=ilp32', '-fuse-ld=ld.lld', '-fno-pic']\n")
+file(APPEND ${PICOLIBC_CROSS_FILE} "c = ['${TOOLCHAIN_BIN_DIR}/clang', '--target=riscv32-unknown-elf', '-march=rv32imc_xpac', '-mabi=ilp32', '-fuse-ld=ld.lld', '-fno-pic', '-mret-xpac']\n")
 file(APPEND ${PICOLIBC_CROSS_FILE} "ar = '${TOOLCHAIN_BIN_DIR}/llvm-ar'\n")
 file(APPEND ${PICOLIBC_CROSS_FILE} "nm = '${TOOLCHAIN_BIN_DIR}/llvm-nm'\n")
 file(APPEND ${PICOLIBC_CROSS_FILE} "ranlib = '${TOOLCHAIN_BIN_DIR}/llvm-ranlib'\n")
