--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -80,13 +80,13 @@ set(LLVM_BUILTIN_TARGETS
 set(COMPILER_RT_CMAKE_SYSTEM_NAME Generic CACHE STRING "")
 set(COMPILER_RT_CMAKE_SYSTEM_PROCESSOR RISCV CACHE STRING "")
 
-set(RV32_FLAGS "-march=rv32imac_zicsr_zifencei -mabi=ilp32")
+set(RV32_FLAGS "-march=rv32imac_zicsr_zifencei_xpac -mabi=ilp32 -mret-xpac")
 
-set(COMPILER_RT_CMAKE_C_FLAGS
+set(BUILTINS_riscv32-unknown-elf_CMAKE_C_FLAGS
     "${RV32_FLAGS}" CACHE STRING "")
-set(COMPILER_RT_CMAKE_CXX_FLAGS
+set(BUILTINS_riscv32-unknown-elf_CMAKE_CXX_FLAGS
     "${RV32_FLAGS}" CACHE STRING "")
-set(COMPILER_RT_CMAKE_ASM_FLAGS
+set(BUILTINS_riscv32-unknown-elf_CMAKE_ASM_FLAGS
     "${RV32_FLAGS}" CACHE STRING "")
 
 # Bare-metal builtins only (no OS)
