chore(picolibc): use yamak fork for PAC support
Switch picolibc submodule from upstream (picolibc/picolibc.git) to
yamak/picolibc.git fork tracking xpac_support branch.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,8 @@
 	branch = xpac_support
 [submodule "picolibc/picolibc-src"]
 	path = picolibc/picolibc-src
-	url = https://github.com/picolibc/picolibc.git
+	url = https://github.com/yamak/picolibc.git
+	branch = xpac_support
 [submodule "gdb/binutils-gdb"]
 	path = gdb/binutils-gdb
 	url = https://github.com/bminor/binutils-gdb.git
