Update llvm-project & add XPAC build configuration options
Updates llvm-project submodule with fix for PAC stack frame corruption
with large functions.

The bug occurred when functions required split SP adjustment (stack size
> 2048 bytes). PAC store/load instructions used inconsistent SP reference
points, causing PAC data corruption and mismatch exceptions at function
return. This was observed in huffbench's compdecomp function.

Also adds CMake configuration flags to enable/disable XPAC support for:
- picolibc
- LLVM compiler-rt
This allows building the runtime libraries with or without PAC return
address protection (-mxpac-ret flag).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,17 @@ if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
         "Installation prefix for the toolchain" FORCE)
 endif()
 
+###############################
+# XPAC Configuration
+###############################
+
+set(MITHRIL_ENABLE_XPAC ON CACHE BOOL "Enable XPAC (Pointer Authentication) support" FORCE)
+
+if(MITHRIL_ENABLE_XPAC)
+    message(STATUS "XPAC support: ENABLED")
+else()
+    message(STATUS "XPAC support: DISABLED")
+endif()
 
 ###############################
 # Submodule management
